@@ -70,18 +70,6 @@ leda_sm_stack_benchmark.$(bin): leda_sm_stack_benchmark.cpp GNUmakefile
 	$(LEDA_COMPILER) -o leda_sm_stack_benchmark.$(EXEEXT) leda_sm_stack_benchmark.$(OBJEXT) $(LEDA_SM_LDFLAGS) $(LEDA_SM_LDLIBS)
 
 
-ifeq ($(strip $(USE_PMODE)),yes)
-# ICPC 12.0: internal error: backend signals (issue 613286)
-$(call reduce_optimization,3,0,test_pqueue,Version_12.0,any,any)
-$(call reduce_optimization,3,0,test_ext_merger2,Version_12.0,any,any)
-$(call reduce_optimization,3,0,bench_pqueue,Version_12.0,any,any)
-$(call reduce_optimization,3,0,monotonic_pq,Version_12.0,any,any)
-$(call reduce_optimization,3,0,pq_benchmark,Version_12.0,any,any)
-$(call reduce_optimization,3,0,btree/test_corr_insert_erase,Version_12.0,any,any)
-$(call reduce_optimization,3,0,btree/test_corr_insert_scan,Version_12.0,any,any)
-$(call reduce_optimization,3,0,berkeley_db_benchmark,Version_12.0,any,any)
-endif
-
 ifeq ($(strip $(USE_MCSTL)),yes)
 # PR33361: internal compiler error: in find_outermost_region_in_block, at tree-cfg.c:4803
 # when using g++-4.2 -fopenmp -O3. Fixed in g++-4.3, wontfix in g++-4.2.
@@ -99,20 +87,6 @@ else
 $(call reduce_optimization,3,0,berkeley_db_benchmark,gcc_version_4.2,64-bit,any)
 $(call reduce_optimization,3,0,berkeley_db_benchmark,gcc_version_4.2,32-bit,any)
 endif
-
-# ICPC 12.0: internal error: backend signals (issue 613286)
-$(call reduce_optimization,3,0,test_pqueue,Version_12.0,any,any)
-$(call reduce_optimization,3,0,test_ext_merger,Version_12.0,any,any)
-$(call reduce_optimization,3,0,test_ext_merger2,Version_12.0,any,any)
-$(call reduce_optimization,3,0,bench_pqueue,Version_12.0,any,any)
-$(call reduce_optimization,3,0,monotonic_pq,Version_12.0,any,any)
-$(call reduce_optimization,3,0,pq_benchmark,Version_12.0,any,any)
-$(call reduce_optimization,3,0,test_map_random,Version_12.0,any,any)
-$(call reduce_optimization,3,0,btree/test_btree,Version_12.0,any,any)
-$(call reduce_optimization,3,0,btree/test_const_scan,Version_12.0,any,any)
-$(call reduce_optimization,3,0,btree/test_corr_insert_erase,Version_12.0,any,any)
-$(call reduce_optimization,3,0,btree/test_corr_insert_scan,Version_12.0,any,any)
-$(call reduce_optimization,3,0,berkeley_db_benchmark,Version_12.0,any,any)
 
 # ICPC 11.0: internal error: 0_1374 (issue 539748)
 $(call reduce_optimization,3,1,btree/test_btree,Version_11.0,any,any)
